# data_analysis_agent

./: .gitignore  README.md  main.py  pyproject.toml
app/: agent.py  instructions.md  pdf_generator.py
app/model/: find_email_output.py
tests/: test_auth.py  test_send.py
