[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno[os]>=2.5.17",
    "openai>=2.32.0",
    "sentence-transformers",
    "chromadb",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.3",
    "google-api-python-client>=2.195.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "pandas>=3.0.2",
    "duckdb>=1.5.2",
    "aiofiles>=25.1.0",
]
